#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package pdscalibdata
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-04-06
2013-05-02 Andy
- add missing include in couple of files

Tag: V00-04-05
2013-04-03 Mikhail Dubrovin
- add new calibraion data classes: CsPadCenterGlobalV1 and CsPadRotationGlobalV1
	
Tag: V00-04-04
2013-03-09 Mikhail Dubrovin
- in CsPad2x2CenterV1 and CsPad2x2TiltV1 improve print()

Tag: V00-04-03
2013-03-08 Mikhail Dubrovin
- add new calibraion data classes: CsPad2x2CenterV1 and CsPad2x2TiltV1

Tag: V00-04-02
2013-03-02 Andy Salnikov
- add missing includes to CsPadBeamVectorV1 and CsPadBeamIntersectV1

Tag: V00-04-01
2013-03-01 Mikhail Dubrovin
- add new calibraion data classes CsPadBeamVectorV1 and CsPadBeamIntersectV1;
  in all CalibPars*.cpp add default parameters in default constructor
	
Tag: V00-04-00
2013-01-30 Andy Salnikov
- switching to const ndarrays for array data

Tag: V00-03-08
2013-01-28 Andy Salnikov
- updates related to changes in ndarray constness

Tag: V00-03-07
2012-11-08 Andy Salnikov
- for cspad calibrations which read per-pixel data from files improve
  error message if file contains more data than needed

Tag: V00-03-06
2012-08-08 Andy Salnikov
- new method CsPadFilterV1::filter() which takes also pixel status array

Tag: V00-03-04
2012-07-27 Andy Salnikov
- small fixes to doxygen comments

Tag: V00-03-03
2012-07-24 Andy Salnikov
- rhel6/gcc44 migration, added some missing headers

Tag: V00-03-02
2012-04-23 Andy Salnikov
- two new calibraion data classes: CsPad2x2PixelGain and CsPadPixelGain

Tag: V00-03-01
2012-02-08 Andy Salnikov
- small fix to comments

Tag: V00-03-00
2012-02-08 Andy Salnikov
- renamed CsPadMini classes to CsPad2x2

Tag: V00-02-00