@@ -11,6 +11,12 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-05-00
+2013-09-24 Andy Salnikov
+- pdsdata is now DDL-based, with a lot of changes to interface
+- modify all dependencies in this package
+- should we use definitions from psddl_psana instead?
+
 Tag: V00-04-06
 2013-05-02 Andy
 - add missing include in couple of files
